# document-search

./: .gitignore  README.md  load.py  pyproject.toml  run.py
search/: analysis.py  documents.py  index.py  timing.py  treat.py
test/: document_test.py  path_test.py
